--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Trento Web
 tagline: Material design for Github-pages
 img : 1.jpg
 img-mobile : 1-mobile.jpg
-css: index.css
+css: styles.css
 ---
 {% include JB/setup %}
 
