--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 ---
 layout: index
-title: Trento Web
-tagline: Material design for Github-pages
-img : 1.jpg
-img-mobile : 1-mobile.jpg
+title: ScrollManiac
+tagline: Scrolling effect with scrollmagic
 css: styles5.css
 ---
 {% include JB/setup %}
-
 <!--[if lt IE 8]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
