--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ tagline: Scrolling effect with scrollmagic
 css: styles5.css
 ---
 {% include JB/setup %}
+<!--[if lt IE 8]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+<![endif]-->
+<div id="preloader">
+    <div class="txt">
+        <p class="txt-perc">0%</p>
+        <div class="progress"><span></span></div>
+    </div>
+</div>
+
 
 <div id="intro" class="header-container fs">
     <div class="bcg"></div>
