--- a/index.html
+++ b/index.html
@@ -135,6 +135,17 @@ css: styles5.css
         </div> <!-- .wrapper -->
     </article>
 
+    <article id="cb01" class="content-block">
+        <div class="wrapper">
+            <header class="slideInUp">
+                <h1>THE VIEWS</h1>
+            </header>
+            <section>
+                <p class="slideInUp slideInUp2">What is hard to endure is sweet to remember.</p>
+            </section>
+        </div> <!-- .wrapper -->
+    </article>
+
 </div> <!-- #main-container -->
 
 <div class="footer-container">
