--- a/index.html
+++ b/index.html
@@ -146,45 +146,22 @@ css: styles5.css
         </div> <!-- .wrapper -->
     </article>
 
-    <style type="text/css">
-	#pinContainer {
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
-	}
-	.panel {
-		height: 100%;
-		width: 100%;
-		position: absolute;
-	}
-</style>
-<div id="pinContainer">
-	<section class="panel bordeaux">
-		<b>FOUR</b>
-	</section>
-</div>
-<script>
-	$(function () { // wait for document ready
-		// init
-		var controller = new ScrollMagic.Controller();
-
-		// define movement of panels
-		var wipeAnimation = new TimelineMax()
-			.fromTo("section.panel.bordeaux", 1, {y: "-100%"}, {y: "0%", ease: Linear.easeNone}); // in from top
-
-		// create scene to pin and link animation
-		new ScrollMagic.Scene({
-				triggerElement: "#pinContainer",
-				triggerHook: "onLeave",
-				duration: "300%"
-			})
-			.setPin("#pinContainer")
-			.setTween(wipeAnimation)
-			.addIndicators() // add indicators (requires plugin)
-			.addTo(controller);
-	});
-</script>
-
+<article class="content-block">
+    <div id="pinContainer">
+    	<section class="panel blue">
+    		<b>ONE</b>
+    	</section>
+    	<section class="panel turqoise">
+    		<b>TWO</b>
+    	</section>
+    	<section class="panel green">
+    		<b>THREE</b>
+    	</section>
+    	<section class="panel bordeaux">
+    		<b>FOUR</b>
+    	</section>
+    </div>
+</article>
 
 </div> <!-- #main-container -->
 
