--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@ css: styles5.css
 
 
     <div id="pinContainer">
-    	<section class="panel blue">
+    	<section style="background-color: blue" class="panel blue">
     		<b>ONE</b>
     	</section>
-    	<section class="panel turqoise">
+    	<section style="background-color: yellow" class="panel turqoise">
     		<b>TWO</b>
     	</section>
-    	<section class="panel green">
+    	<section style="background-color: green" class="panel green">
     		<b>THREE</b>
     	</section>
-    	<section class="panel bordeaux">
+    	<section style="background-color: red" class="panel bordeaux">
     		<b>FOUR</b>
     	</section>
     </div>
