--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: index
 title: ScrollManiac
 tagline: Scrolling effect with scrollmagic
-css: styles5.css
+css: 
 ---
 {% include JB/setup %}
 <div class="sidebar">
