--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ css:
 
                 <div class="logo-container">
                     <p class="logo">
-                        <img class="logo-iht" src="img/iht-logo-big.svg" alt="Ihatetomatoes.net">
+                        <img class="logo-iht" src="{{ BASE_PATH }}/assets/images/antonio-trento-avatar-300x300.svg" alt="Antonio Trento">
                         <span>presents</span>
                     </p>
                 </div>
