--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ css:
 
         <div id="main" class="slide01-active">
 
-            <button class="button button-more" title="Learn ScrollMagic from scratch.">Learn</button>
+            <button class="button button-more" title="Fork me on GitHub.">Fork me</button>
 
             <div class="pin-wrapper">
 
