--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 ---
 layout: index
-title: ScrollManiac
-tagline: Scrolling effect with scrollmagic
+title: ScrollMani
+tagline: Scrolling effect wit
 css:
 ---
 {% include JB/setup %}
