--- a/test.html
+++ b/test.html
@@ -7,14 +7,14 @@ css:
 {% include JB/setup %}
 <style type="text/css">
 	#pinContainer {
-		width: 100%;
-		height: 100%;
-		overflow: hidden;
+		width: 100% !important;
+		height: 100% !important;
+		overflow: hidden !important;
 	}
 	.panel {
-		height: 100%;
-		width: 100%;
-		position: absolute;
+		height: 100% !important;
+		width: 100% !important;
+		position: absolute !important;
 	}
 </style>
 <div id="pinContainer">
