--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ css:
                <div class="wrapper">
                    <header class="slideInUp">
                       <h3>TREND 4</h3>
-                      <h1><font color="#ffffff">Organized<br>chaos</font></h1>
+                      <h1><font color="#ffffff">Organ<br>chaos</font></h1>
                    </header>
                    <section>
                      <p class="slideInUp slideInUp2"><font color="#ffffff">In contrast to the more excessive,<br>80's inspired styles, a rebellious, minimalist trend is evolving. </font></p>
