--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ css:
                <div class="wrapper">
                    <header class="slideInUp">
                       <h3>TREND 3</h3>
-                      <h1><font color="#ffffff">Modular<br>layout</font></h1>
+                      <h1><font color="#ffffff">Modu<br>layout</font></h1>
                    </header>
                    <section>
                      <p class="slideInUp slideInUp2"><font color="#ffffff">Modular or card-based layouts have been adopted by some of the biggest brands for their websites and mobile apps.<strong> </strong></font></p>
