--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ css:
                <li><a href="#slide09"><span class="nav-dot"></span><span class="nav-label">Modular layout</span></a></li>
                <li><a href="#slide012"><span class="nav-dot"></span><span class="nav-label">Organized chaos</span></a></li>
                <li><a href="#slide015"><span class="nav-dot"></span><span class="nav-label">Material design</span></a></li>
+               <li><a href="#slide020"><span class="nav-dot"></span><span class="nav-label">Material design</span></a></li>
            </ul>
        </nav>
 
@@ -277,3 +278,14 @@ css:
                    </section>
               </div> <!-- .wrapper -->
         </article>
+
+        <article id="slide020" class="slide ms">
+               <div class="wrapper">
+                   <header class="slideInUp">
+                     <h2><font color="#333333">Modular layout stand for responsive,<br>adaptability and coherence.</font></h2>
+                   </header>
+                   <section>
+                     <a href="http://pharrellwilliams.com/" target="_blank"><p class="slideInUp slideInUp2"><font color="#333333">See Pharrell Williams website</a> →</p></font>
+                 </section>
+               </div> <!-- .wrapper -->
+     </article>
