--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ css:
         <article id="slide020" class="slide ms">
                <div class="wrapper">
                    <header class="slideInUp">
-                     <h2><font color="#333333">Modular layout stand for responsive,<br>adaptability and coherence.</font></h2>
+                     <h2><font>Modular layout stand for responsive,<br>adaptability and coherence.</font></h2>
                    </header>
                    <section>
                      <a href="http://pharrellwilliams.com/" target="_blank"><p class="slideInUp slideInUp2"><font color="#333333">See Pharrell Williams website</a> →</p></font>
