--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ css:
                      <h2><font>Modular layout stand for responsive,<br>adaptability and coherence.</font></h2>
                    </header>
                    <section>
-                     <a href="http://pharrellwilliams.com/" target="_blank"><p class="slideInUp slideInUp2"><font color="#333333">See Pharrell Williams website</a> →</p></font>
+                     <a href="http://pharrellwilliams.com/" target="_blank"><p class="slideInUp slideInUp2"><font>See Pharrell Williams website</a> →</p></font>
                  </section>
                </div> <!-- .wrapper -->
      </article>
