--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="100">100</p>
+                        <p class="number" data-value="100">8</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Antonio Trento</strong>
-                            <em class="fade-txt">Skills</em>
-                            <span class="fade-txt">counter</span>
+                            <strong class="fade-txt">What Antonio</strong>
+                            <em class="fade-txt">Trento can do for</em>
+                            <span class="fade-txt">You with his Magic</span>
                         </p>
                         <div id="layers">
 
@@ -91,13 +91,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="73">73%</p>
+                        <p class="number" data-value="79">79%</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">able</strong>
-                            <em class="fade-txt">to use</em>
-                            <span class="fade-txt">HTML</span>
+                            <strong class="fade-txt">Grow Hack</strong>
+                            <em class="fade-txt">Your</em>
+                            <span class="fade-txt">Brand</span>
                         </p>
                     </div>
                 </div>
@@ -111,9 +111,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Build CSS</strong>
-                            <em class="fade-txt">structures and</em>
-                            <span class="fade-txt">animations</span>
+                            <strong class="fade-txt">Find ways</strong>
+                            <em class="fade-txt">To build your</em>
+                            <span class="fade-txt">Tagered audience</span>
                         </p>
                     </div>
                 </div>
@@ -123,13 +123,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="53">53%</p>
+                        <p class="number" data-value="63">63%</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Play with</strong>
-                            <em class="fade-txt">Javascript</em>
-                            <span class="fade-txt">libraries</span>
+                            <strong class="fade-txt">Open</strong>
+                            <em class="fade-txt">Your team</em>
+                            <span class="fade-txt">Eyes</span>
                         </p>
                     </div>
                 </div>
@@ -139,13 +139,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="71">71%</p>
+                        <p class="number" data-value="91">91%</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Create</strong>
-                            <em class="fade-txt">Bootstrap</em>
-                            <span class="fade-txt">templates</span>
+                            <strong class="fade-txt">Make your</strong>
+                            <em class="fade-txt">Marketing Strategy</em>
+                            <span class="fade-txt">Magnetic</span>
                         </p>
                     </div>
                 </div>
@@ -155,13 +155,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="40">40%</p>
+                        <p class="number" data-value="50">50%</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">use</strong>
-                            <em class="fade-txt">scrolling and</em>
-                            <span class="fade-txt">animations</span>
+                            <strong class="fade-txt">Find ways</strong>
+                            <em class="fade-txt">to Not</em>
+                            <span class="fade-txt">waste Time</span>
                         </p>
                     </div>
                 </div>
@@ -171,13 +171,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="35">35%</p>
+                        <p class="number" data-value="70">70%</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">work</strong>
-                            <em class="fade-txt">whit SGV</em>
-                            <span class="fade-txt">Images</span>
+                            <strong class="fade-txt">Tips to make</strong>
+                            <em class="fade-txt">your writing and graphics</em>
+                            <span class="fade-txt">Comunication Magic</span>
                         </p>
                     </div>
                 </div>
