--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ css:
                     <div class="secondary">
                         <p class="title">
                             <strong class="fade-txt">Find ways</strong>
-                            <em class="fade-txt">to Not</em>
-                            <span class="fade-txt">waste Time</span>
+                            <em class="fade-txt">to Not waste</em>
+                            <span class="fade-txt">Your Time</span>
                         </p>
                     </div>
                 </div>
