--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="70">70%</p>
+                        <p class="number" data-value="60">60%</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
@@ -191,9 +191,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Build</strong>
-                            <em class="fade-txt">your</em>
-                            <span class="fade-txt">audience</span>
+                            <strong class="fade-txt">Advice to Spy your</strong>
+                            <em class="fade-txt">Competitors and take the</em>
+                            <span class="fade-txt">Best from them</span>
                         </p>
                     </div>
                 </div>
