--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Advice to Spy your</strong>
+                            <strong class="fade-txt">Advices to Spy your</strong>
                             <em class="fade-txt">Competitors and take the</em>
                             <span class="fade-txt">Best from them</span>
                         </p>
