--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ css:
                     <div class="bcg-white"></div>
                     <div class="primary">
                         <div class="bcg"></div>
-                        <p class="number" data-value="100">8</p>
+                        <p class="number" data-value="8">8</p>
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">What Antonio</strong>
-                            <em class="fade-txt">Trento can do for</em>
-                            <span class="fade-txt">You with his Magic</span>
+                            <strong class="fade-txt">Skills that Antonio</strong>
+                            <em class="fade-txt">Know to help you</em>
+                            <span class="fade-txt">with his Magic</span>
                         </p>
                         <div id="layers">
 
