--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ css:
                         <p class="number" data-value="8">8</p>
                     </div>
                     <div class="secondary">
-                        <p class="title-small">
+                        <p class="title">
                             <strong class="fade-txt">Skills that Antonio</strong>
                             <em class="fade-txt">Know to help you</em>
                             <span class="fade-txt">with his Magic</span>
@@ -110,7 +110,7 @@ css:
                         <p class="number" data-value="81">81%</p>
                     </div>
                     <div class="secondary">
-                        <p class="title-small">
+                        <p class="title">
                             <strong class="fade-txt">Find ways</strong>
                             <em class="fade-txt">To build your</em>
                             <span class="fade-txt">Tagered audience</span>
@@ -142,7 +142,7 @@ css:
                         <p class="number" data-value="91">91%</p>
                     </div>
                     <div class="secondary">
-                        <p class="title-small">
+                        <p class="title">
                             <strong class="fade-txt">Make your</strong>
                             <em class="fade-txt">Marketing Strategy</em>
                             <span class="fade-txt">Magnetic</span>
@@ -174,7 +174,7 @@ css:
                         <p class="number" data-value="60">60%</p>
                     </div>
                     <div class="secondary">
-                        <p class="title-small">
+                        <p class="title">
                             <strong class="fade-txt">Tips to make</strong>
                             <em class="fade-txt">your writing and graphics</em>
                             <span class="fade-txt">Comunication Magic</span>
@@ -190,7 +190,7 @@ css:
                         <p class="number" data-value="80">80%</p>
                     </div>
                     <div class="secondary">
-                        <p class="title-small">
+                        <p class="title">
                             <strong class="fade-txt">Advices to Spy your</strong>
                             <em class="fade-txt">Competitors and take the</em>
                             <span class="fade-txt">Best from them</span>
