--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ css:
 
         <div id="main" class="slide01-active">
 
-            <button class="button button-more" title="Fork me on GitHub.">Fork me</button>
+            <button class="button button-more" title="I want your help Antonio.">Need It</button>
 
             <div class="pin-wrapper">
 
@@ -308,12 +308,12 @@ css:
             <button class="button button-close">Close</button>
             <div class="miContent">
 
-                <a href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Learn how to build 3 interactive projects from scratch.">
-                    <img src="img/img_scrollmagic-greensock.png" alt="Learn ScrollMagic and GreenSock from scratch." />
+                <a href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Become a magic pirate of your business.">
+                    <img src="img/img_scrollmagic-greensock.png" alt="Learn how the Antonio magic skills can help you." />
                 </a>
 
-                <h1>Do you want to learn how to build interactive scrolling websites like this?</h1>
-                <p>Learn <strong>ScrollMagic</strong> from scratch with me, it's easy!</p>
-                <a class="button button-link" href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Learn how to build 3 interactive projects from scratch.">Yes, let's go!</a>
+                <h1>All the pioneers of the New World were first considered crazy and then worshiped as a god. Which way do you want to stay?</h1>
+                <p>Among the 'well-thinking' or the <strong>winning pirates</strong>?</p>
+                <a class="button button-link" href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Learn how to become a magic pirate from scratch.">Yes, let's go!</a>
             </div>
         </div>
