--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ css:
                                 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      width="80px" height="80px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-                                    <a xlink:href="https://twitter.com/home?status=100%20Awwwards%20Websites%20deconstructed%20by%20%40ihatetomatoes%20https%3A//ihatetomatoes.net/awwwards/" target="_blank">
+                                    <a xlink:href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" target="_blank">
                                         <path fill-rule="evenodd" fill="#ffffff" clip-rule="evenodd" d="M50,0C22.386,0,0,22.386,0,50s22.386,50,50,50s50-22.386,50-50S77.614,0,50,0z
                                              M76.672,36.356c0.271,9.101-2.272,16.407-5.653,22.091c-3.343,5.617-7.828,10.079-13.192,13.349
                                             c-5.404,3.294-12.634,5.68-21.097,5.444c-7.908-0.22-14.182-2.494-19.317-5.602c-0.321-0.194-0.715-0.352-0.942-0.681
@@ -234,7 +234,7 @@ css:
                                 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
                                 <svg version="1.1" id="Facebook" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      width="80px" height="80px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
-                                    <a xlink:href="https://www.facebook.com/sharer/sharer.php?u=https%3A//ihatetomatoes.net/awwwards/" target="_blank">
+                                    <a xlink:href="https://facebook.com/sharer/sharer.php?u={{ site.url }}{{ page.url }}" target="_blank">
                                         <path fill-rule="evenodd" fill="#ffffff" clip-rule="evenodd" d="M50,0C22.386,0,0,22.386,0,50c0,27.614,22.386,50,50,50s50-22.386,50-50
                                     C100,22.386,77.614,0,50,0z M56.953,36.94c3.542,0.037,7.23-0.073,10.683,0.055c-0.116,3.683-0.027,7.57-0.056,11.34
                                     c-3.542,0-7.085,0-10.627,0c0,11.668,0,23.337,0,35.005c-4.985,0-9.971,0-14.956,0c0-11.65,0-23.3,0-34.95
@@ -250,7 +250,7 @@ css:
                                 <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                      width="80px" height="80px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve">
                                     <g>
-                                        <a xlink:href="https://plus.google.com/share?url=https%3A//ihatetomatoes.net/awwwards/" target="_blank">
+                                        <a xlink:href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" target="_blank">
                                             <path fill-rule="evenodd" fill="#ffffff" clip-rule="evenodd" d="M36.509,56.759c-3.863,0.267-7.366,1.864-9.091,3.909
                                                 c-0.784,0.93-1.682,2.664-1.729,4.272c-0.037,1.265,0.353,2.45,0.818,3.273c1.523,2.688,4.965,4.385,8.729,4.638
                                                 c4.96,0.332,10.423-1.979,12.092-5.911c0.617-1.45,0.652-3.52,0-5C45.842,58.565,41.331,56.425,36.509,56.759z"/>
