--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Find ways</strong>
+                            <span class="fade-txt">Find ways</span>
                             <em class="fade-txt">To build your</em>
-                            <span class="fade-txt">Tagered audience</span>
+                            <strong class="fade-txt">Tagered audience</strong>
                         </p>
                     </div>
                 </div>
@@ -127,9 +127,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Open</strong>
-                            <em class="fade-txt">Your team</em>
-                            <span class="fade-txt">Eyes</span>
+                            <span class="fade-txt">Open</span>
+                            <strong class="fade-txt">Your team</strong>
+                            <em class="fade-txt">Eyes</em>
                         </p>
                     </div>
                 </div>
@@ -143,8 +143,8 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Make your</strong>
-                            <em class="fade-txt">Marketing Strategy</em>
+                            <em class="fade-txt">Make your</em>
+                            <strong class="fade-txt">Marketing Strategy</strong>
                             <span class="fade-txt">Magnetic</span>
                         </p>
                     </div>
@@ -159,9 +159,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Find ways</strong>
+                            <span class="fade-txt">Find ways</span>
                             <em class="fade-txt">to Not waste</em>
-                            <span class="fade-txt">Your Time</span>
+                            <strong class="fade-txt">Your Time</strong>
                         </p>
                     </div>
                 </div>
@@ -177,7 +177,7 @@ css:
                         <p class="title">
                             <strong class="fade-txt">Tips to make</strong>
                             <em class="fade-txt">your writing and graphics</em>
-                            <span class="fade-txt">Comunication Magic</span>
+                            <span class="fade-txt">Comunication Amazing</span>
                         </p>
                     </div>
                 </div>
@@ -191,9 +191,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <strong class="fade-txt">Advices to Spy your</strong>
+                            <span class="fade-txt">Advices to Spy your</span>
                             <em class="fade-txt">Competitors and take the</em>
-                            <span class="fade-txt">Best from them</span>
+                            <strong class="fade-txt">Best from them</strong>
                         </p>
                     </div>
                 </div>
