--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@ css:
                     </div>
                     <div class="secondary">
                         <p class="title">
-                            <em class="fade-txt">Make your</em>
+                            <span class="fade-txt">Make your</span>
                             <strong class="fade-txt">Marketing Strategy</strong>
-                            <span class="fade-txt">Magnetic</span>
+                            <em class="fade-txt">Magnetic</em>
                         </p>
                     </div>
                 </div>
