--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ css:
             <div class="miContent">
 
                 <a href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Become a magic pirate of your business.">
-                    <img src="img/img_scrollmagic-greensock.png" alt="Learn how the Antonio magic skills can help you." />
+                    <img src="assets/images/magic-hat.png" alt="Learn how the Antonio magic skills can help you." />
                 </a>
 
                 <h1>All the pioneers of the New World were first considered crazy and then worshiped as a god. Which way do you want to stay?</h1>
