--- a/index.html
+++ b/index.html
@@ -308,12 +308,12 @@ css:
             <button class="button button-close">Close</button>
             <div class="miContent">
 
-                <a href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Become a magic pirate of your business.">
+                <a href="http://eepurl.com/ckInGX" target="_blank" title="Become a magic pirate of your business.">
                     <img src="assets/images/magic-hat.png" alt="Learn how the Antonio magic skills can help you." />
                 </a>
 
                 <h1>All the pioneers of the New World were first considered crazy and then worshiped as a god. Which way do you want to stay?</h1>
                 <p>Among the 'well-thinking' or the <strong>winning pirates</strong>?</p>
-                <a class="button button-link" href="https://ihatetomatoes.net/scrollmagic-101/" target="_blank" title="Learn how to become a magic pirate from scratch.">Yes, let's go!</a>
+                <a class="button button-link" href="http://eepurl.com/ckInGX" target="_blank" title="Learn how to become a magic pirate from scratch.">Yes, let's go!</a>
             </div>
         </div>
