--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ css:
                         <p class="title">
                             <strong class="fade-txt">Skills that Antonio</strong>
                             <em class="fade-txt">Know to help you</em>
-                            <span class="fade-txt">with his Magic</span>
+                            <span class="fade-txt">with his Magic!</span>
                         </p>
                         <div id="layers">
 
