--- a/index.html
+++ b/index.html
@@ -314,6 +314,6 @@ css:
 
                 <h1>All the pioneers of the New World were first considered crazy and then worshiped as a god. Which way do you want to stay?</h1>
                 <p>Among the 'well-thinking' or the <strong>winning pirates</strong>?</p>
-                <a class="button button-link" href="http://eepurl.com/ckInGX" target="_blank" title="Learn how to become a magic pirate from scratch.">Yes, let's go!</a>
+                <a class="button button-link" href="http://antoniotrento.net" target="_blank" title="Learn how to become a magic pirate from scratch.">Yes, let's go!</a>
             </div>
         </div>
